done some account stuff, in the middle of stripe stuff, gonna refactor

--- a/Website (Node and HBS)/views/account/account.hbs
+++ b/Website (Node and HBS)/views/account/account.hbs
@@ -1,3 +1,5 @@
-<h2>Account</h2>
+<h2>Hi {{req.user.first_name}}!</h2>
 <h3>ID verification</h3>
-<h3>Purchases</h3>
+<h3>Purchases</h3> 
+
+{{stringify req.user}}
