--- a/Website (Node and HBS)/views/events/purchase-page.hbs
+++ b/Website (Node and HBS)/views/events/purchase-page.hbs
@@ -40,11 +40,11 @@
 
 <div id="available-tickets"></div>
 
-<div id="change-city-modal" class="pi-modal">
+<div id="change-city-modal" class="modal flex-column">
     {{> city-cards}}
 </div>
 
-<div id="select-seats-modal" class="pi-modal"></div>
+<div id="select-seats-modal" class="modal"></div>
 
 <script src="/js/fetchData.js"></script>
 <script type="module" src="/js/purchase-page.js"></script> <!--https://stackoverflow.com/a/55310399-->
