--- a/Website (Node and HBS)/views/events/waiting-list-signup.hbs
+++ b/Website (Node and HBS)/views/events/waiting-list-signup.hbs
@@ -26,7 +26,7 @@
                             </div>
                         </td>        
 
-                        {{!-- <label for="" data-venue-id="{{this.venue_id}}" class="ml-3" hidden>Dates</label> --}}
+                        {{!-- <label for="" data-venue-id="{{this.venue_id}}" class="ms-3" hidden>Dates</label> --}}
                         <td>
                             <select
                                 {{!-- id="select-dates-venue-{{this.venue_id}}" --}}
