--- a/Website (Node and HBS)/views/partials/city-cards.hbs
+++ b/Website (Node and HBS)/views/partials/city-cards.hbs
@@ -21,6 +21,6 @@
 
         <aside>
             <img src="" alt="Seat map showing current availability">
-        </div>
+        </aside>
     </div>
 {{/each}}
