--- a/Website (Node and HBS)/public/styles.css
+++ b/Website (Node and HBS)/public/styles.css
@@ -74,7 +74,7 @@
     background-color: rgba(0, 0, 0, 0.5);
 } */
 
-.pi-modal {
+.modal {
     display: none;
     position: absolute;
     top: 0;
