--- a/Website (Node and HBS)/public/views/available-tickets.hbs
+++ b/Website (Node and HBS)/public/views/available-tickets.hbs
@@ -1,7 +1,7 @@
 {{#each availableTickets}}
     <div class="card available-ticket-card container p-3" data-index="{{@index}}">
         <div class="row mb-1">
-            <button class="col-1 btn btn-outline-secondary p-0 ml-3 mw-80">Details</button>
+            <button class="col-1 btn btn-outline-secondary p-0 ms-3 mw-80">Details</button>
             <h3 class="col-8 mb-0">Block {{this.block}}, Section {{this.section}}, Row {{this.row}}</h3>
             <p class="col-3 text-end mb-0 align-self-center">{{this.price.total}}</p>
         </div>
