--- a/Website (Node and HBS)/views/layouts/main.hbs
+++ b/Website (Node and HBS)/views/layouts/main.hbs
@@ -1,9 +1,11 @@
 <!DOCtyPE html>
 <html lang="en">
 <head>
+    {{{_sections.head}}}
+
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Tickets</title>
+    {{!-- <title>Tickets</title> --}}
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <link rel="stylesheet" type="text/css" href="/styles.css" />
 
@@ -20,6 +22,7 @@
 
     {{!-- Handlebars --}}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js" integrity="sha512-RNLkV3d+aLtfcpEyFG8jRbnWHxUqVZozacROI4J2F1sTaDqo1dPQYs01OMi1t1w9Y2FdbSCDSQ2ZVdAC8bzgAg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 </head>
 <body>
 <header>
@@ -29,5 +32,10 @@
     {{{body}}}
 {{!-- </main> --}}
 {{!-- <script type="module" src="/js/helpers.js"></script> --}}
+
+<script>
+    {{{_sections.script}}}
+
+</script>
 </body>
 </html>
