--- a/Website (Node and HBS)/views/search.hbs
+++ b/Website (Node and HBS)/views/search.hbs
@@ -1,20 +1,42 @@
-<h2>Search Results</h2>
-<p>You searched for: {{ query }}</p>
-<p class="comment"><a href="https://stackoverflow.com/questions/3468812/mysql-query-contains">https://stackoverflow.com/questions/3468812/mysql-query-contains</a></p>
+<header class="bg-secondary p-3 {{!d-flex}}">
+    <h2 class="text-center">Search Results</h2>
+
+    <form action="/search" method="get" class="d-flex">
+        <input
+            id="search"
+            class="form-control me-2"
+            type="search"
+            name="query" 
+            placeholder="Search for an artist, city, venue, or tour" 
+            value="{{query}}" 
+            minlength="3"
+            pattern=".{3,}" {{! minlength doesn't auto validate https://stackoverflow.com/a/10294291 }}
+            title="Search term must be 3 or more characters long"
+            required
+        >
+        <button type="submit" class="btn btn-dark col-2 py-2">Go</button>
+    </form>
+</header>
+
+{{!-- <p class="comment"><a href="https://stackoverflow.com/questions/3468812/mysql-query-contains">https://stackoverflow.com/questions/3468812/mysql-query-contains</a></p>
 <p class="comment">This page could be the same as the events page/route just with the query filter applied...</p>
 <p class="comment">This could be done way better: if it matches artist or tour column just return the tour(s), if it matches a city or venue then do the grouping dates thing</p>
-<p class="comment">Eh this'll do</p>
+<p class="comment">Eh this'll do</p> --}}
 
-{{#each results}}
-    <a href="">
-        <h2>{{this.artist_name}} {{this.tour_name}}</h2>
-        <h3>{{this.venue_name}}, {{this.city}} </h3>
-        <p>
-            {{groupFormatDates this.dates}}
-            {{!-- {{log (groupFormatDates this.dates)}} --}}
-            {{!-- {{#each this.dates}}
-                {{formatDate this "do LLL ''yy"}}{{#unless @last}}, {{/unless}}
-            {{/each}} --}}
-        </p>
-    </a>
-{{/each}}
+<main class="p-3">
+    {{#unless results.length}}
+        <p class="text-center">No results found for {{query}}. Try searching for something else.</p>
+        {{!-- <form action="/search" method="get" class="d-flex col-6 m-auto">
+            <input class="form-control mx-2" type="search" id="search" name="query" placeholder="Search for an artist, city, or tour"  required>
+            <button type="submit" class="btn btn-outline-primary">Go</button>
+        </form> --}}
+    {{/unless}}
+
+    {{#each results}}
+        <a href="/events/tour/{{this.tour_id}}?venue={{this.venue_id}}"> {{! do this better later}}
+            <h2>{{this.artist_name}} {{this.tour_name}}</h2>
+            <h3>{{this.venue_name}}, {{this.city}} </h3>
+            <p>{{groupFormatDates this.dates}}</p>
+        </a>
+    {{/each}}
+</main>
