gonna remove excess inner folder

--- a/Website (Node and HBS)/public/views/available-tickets.hbs
+++ b/Website (Node and HBS)/public/views/available-tickets.hbs
@@ -1,3 +1,7 @@
+<div class="d-flex">
+    <button id="sort-high-low" class="sort-tix" data-sort-order="DESC">Best Available</button>
+    <button id="sort-low-high" class="sort-tix" data-sort-order="ASC">Cheapest</button>
+</div>
 {{#each availableTickets}}
     <div class="card available-ticket-card container p-3" data-index="{{@index}}">
         <div class="row mb-1">
