--- a/views/account/register.hbs
+++ b/views/account/register.hbs
@@ -1,4 +1,5 @@
 <h1>Register</h1>
+
 <section id="validation-errors" class="d-none alert alert-danger">
     <p id="name-validation-empty" class="d-none my-1">Please enter your name.</p>
     <p id="email-validation-empty" class="d-none my-1">Please enter an email address.</p>
@@ -7,7 +8,9 @@
     <p id="password-validation-length">Password must contain at least 6 characters</p>
     <p id="password-validation-chars">Password must contain a lowercase letter, a uppercase letter, and a number.</p>
 </section>
+
 <form id="register-form" action="register" method="POST">
+    <input name="redirect" value={{query.redirect}} hidden>
     <label for="firstName">Forename</label><input type="text" name="firstName" id="firstName" required><br>
     <label for="lastName">Surname</label><input type="text" name="lastName" id="lastName" required><br>
     <label for="email">Email</label><input type="email" name="email" id="email" required><br>
