Done some queue, a lot of waiting list functionality but not gonna tackle emails right this second

--- a/views/account/login.hbs
+++ b/views/account/login.hbs
@@ -8,6 +8,8 @@
 
 {{#if (compareValues query.alert '==' 'to-purchase')}}
     <p class="alert alert-primary">Please log in to purchase tickets.</p>
+{{else if (compareValues query.alert '==' 'login-required')}}
+    <p class="alert alert-primary">You must be logged in to access this page.</p>
 {{/if}}
 
 <form action="login" method="POST">
