--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -24,7 +24,7 @@
                                     type="submit" 
                                     {{!-- styling button as link (must be form for delete method) --}}
                                     class="btn btn-light bg-transparent ms-1 col-11 border-0"
-                                    style="text-align: left !important;"
+                                    style="text-align: left !important"
                                 >Logout</button>
                             </form>
                         </li>
